setting up design

--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
 
 </head>
 <body>
-    Testing
+    <header>
+        <a href="#" class="logo-holder">
+            <div class="logo">L</div>
+            <div class="logo-text">Portfolio Website</div>
+        </a>
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Skills</a>
+                </li>
+                <li>
+                    <a href="#">Projects</a>
+                </li>
+                <li>
+                    <a href="#" class="button">Contact Me</a>
+                </li>
+                
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
